fix: fixed collapsed pymakr state bug

--- a/styles/pymakr.less
+++ b/styles/pymakr.less
@@ -46,6 +46,15 @@
   height: 314px;
   background: #000;
 
+  &.container {
+    &-open {
+      display: block !important;
+    }
+    &-close {
+      display: none !important;
+    }
+  }
+
   &.collapsed {
     height: 0px;
   }
